# 473BodyCam

./: .gitignore  BodyCamBoardV1.1.sch
BaseStation/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  client  client-tcp.cpp  client-tcp.hpp  client.cpp  client.hpp  cmake_install.cmake  common.hpp  data.raw.xz  dump.cpp  examine.cpp  pkt.cpp  pkt.hpp  pkt_test.cpp  send.cpp  view-wifi.cpp  view.cpp
cc3000_basic_wifi_application/: .ccsproject  .cproject  .project  application_commands.h  cc3000_basic_wifi_application.c  startup_ccs.c  uvc.c  uvc.h
cc3000_basic_wifi_application/.launches/: cc3000_basic_wifi_application.launch
cc3000_basic_wifi_application/Debug/: cc3000_basic_wifi_application.out  cc3000_basic_wifi_application.pp  cc3000_basic_wifi_application_ccs.map  cc3000_basic_wifi_application_linkInfo.xml  ccsObjs.opt  makefile  objects.mk  sources.mk  startup_ccs.pp  subdir_rules.mk  subdir_vars.mk  ticks.pp  uvc.pp
cc3000_basic_wifi_application/Debug/driverlib/: adc.pp  aes.pp  can.pp  comp.pp  cpu.pp  crc.pp  des.pp  eeprom.pp  emac.pp  epi.pp  flash.pp  fpu.pp  gpio.pp  hibernate.pp  i2c.pp  interrupt.pp  lcd.pp  mpu.pp  onewire.pp  pwm.pp  qei.pp  shamd5.pp  ssi.pp  subdir_rules.mk  sw_crc.pp  sysctl.pp  sysexc.pp  systick.pp  timer.pp  uart.pp  udma.pp  usb.pp  watchdog.pp
cc3000_basic_wifi_application/Debug/usblib/: subdir_rules.mk  usbbuffer.pp  usbdesc.pp  usbdma.pp  usbkeyboardmap.pp  usbmode.pp  usbringbuf.pp  usbtick.pp  usbulpi.pp
cc3000_basic_wifi_application/Debug/utils/: cmdline.pp  cpu_usage.pp  eeprom_pb.pp  flash_pb.pp  isqrt.pp  random.pp  ringbuf.pp  scheduler.pp  sine.pp  smbus.pp  softi2c.pp  softssi.pp  softuart.pp  spi_flash.pp  subdir_rules.mk  subdir_vars.mk  uartstdio.pp  ustdlib.pp
cc3000_basic_wifi_application/Release/: cc3000_basic_wifi_application.out  cc3000_basic_wifi_application_ccs.map  cc3000_basic_wifi_application_linkInfo.xml  ccsObjs.opt  makefile
cc3000_basic_wifi_application/fatfs/port/: mmc-ek-tm4c1294xl.c
cc3000_basic_wifi_application/fatfs/src/: integer.h
cc3000_basic_wifi_application/ff11a/src/: diskio.c
eagle/: BodyCamBoard.brd  BodyCamBoard.sch  BodyCamBoard.txt  BodyCamBoardV1.1.brd  BodyCamBoardV1.1.txt  BodyCamBoardV2.brd  BodyCamBoardV2.sch  IOBoard.brd  IOBoard.sch  bodycam.lbr
tex/: .gitignore  Makefile  budget.tex  fatfs.h  final_report.tex  glossary.tex  gps.h  network.h  proposal.tex  references.bib  subsys_video.dot  sys_desc.tif  trigger.h  uvc.h
trigger/.metadata/: version.ini
trigger/mic_test/: .cproject  .project  main.c
trigger/mic_test/.metadata/: version.ini
trigger/slaa290a/RTC Calendar/: Test_Suite.c
video/: .gitignore
video/1103/: .ccsproject  .cproject  .project  main.c
video/1103/.launches/: 1103.launch
video/1103/Debug/: 1103.map  1103.out  1103_linkInfo.xml  ccsObjs.opt  main.pp
video/473 SDC/: .ccsproject  .cproject  .project  main.c
video/473 SDC/.launches/: 473 SDC.launch
video/473 SDC/Debug/: 473 SDC.map  473 SDC.out  473 SDC_linkInfo.xml  main.pp
video/473 SDC/targetConfigs/: Tiva TM4C1292NCPDT.ccxml
video/main/: .ccsproject  .cproject  main.c  ticks.c  ticks.h  tm4c1294ncpdt_startup_ccs.c  uvc.c  uvc.h
video/sd_card/: .ccsproject  .cproject  .project
video/sd_card/Debug/: ccsObjs.opt  (+9 more)
video/sdcv3/: .ccsproject  .cproject  .project  sdcv3.c  tm4c1292ncpdt_startup_ccs.c
(+133 files in other folders)
